--- a/api-config/src/main/resources/config/common/web.properties
+++ b/api-config/src/main/resources/config/common/web.properties
@@ -8,3 +8,7 @@ server.use-forward-headers=true
 server.tomcat.port-header=x-forwarded-port
 server.tomcat.protocol-header=x-forwarded-proto
 server.tomcat.remote-ip-header=x-forwarded-for
+
+#server.session.cookie.http-only=true
+#server.tomcat.uriEncoding=UTF-8
+#server.tomcat.maxThreads=2000
