--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -2,7 +2,7 @@
 #系统配置
 system.name=${spring.application.name}
 #静态资源地址
-system.static.base=http://localhost:28088
+system.static.base=http://localhost:28010
 #bus消息（交换机）
 system.message.bus=api.message.bus
 #网关消息（交换机）
@@ -11,3 +11,7 @@ system.message.gateway=api.message.gateway
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
 system.message.zipkin=api-zipkin
+#端点内网地址：多个使用逗号隔开
+system.actuator.ip.addresses=0:0::/112,192.168.1.0/24
+#端点地址：多个使用逗号隔开
+system.actuator.ant.matchers=/actuator/**
