--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,14 @@
 	<modules>
 		<module>api-admin</module>
 		<module>api-config</module>
-		<module>api-gateway</module>
 		<module>api-registry</module>
 		<module>api-common/api-common</module>
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-order</module>
 		<module>api-common/api-common-gateway</module>
+		<module>api-gateway/api-gateway-www</module>
+		<module>api-gateway/api-gateway-admin</module>
+		<module>api-gateway/api-gateway-service</module>
 		<module>api-service/api-www</module>
 		<module>api-service/api-www-admin</module>
 		<module>api-service/api-www-resources</module>
